# adv-example

./: .gitignore  README.md
.github/workflows/: nodejs.yml
client/: package-lock.json  package.json
client/src/: index.html  main.tsx
server/: README.rst  pyproject.toml
server/server/: main.py
